Update command localization keys for consistency
Revised various command localization keys to a consistent format across multiple Java classes and properties files. This change ensures uniformity in message handling and formatting, improving both maintainability and readability.

--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -1,76 +1,73 @@
-back.empty=<prefix> <red>Du kannst nicht weiter zurück gehen
-back.teleport.fail=<prefix> <red>Du konntest nicht zu deiner letzten Position teleportiert werden
-back.teleport.success=<prefix> <white>Du wurdest zu deiner letzten Position teleportiert
 chat.format.delete=<hover:show_text:'Klicke um diese Nachricht zu löschen'><dark_gray>[<dark_red><bold>x</bold><dark_gray>] <reset>
+command.back.none=<prefix> <red>Du kannst nicht weiter zurück gehen
+command.back.teleport.fail=<prefix> <red>Du konntest nicht zu deiner letzten Position teleportiert werden
+command.back.teleport.success=<prefix> <white>Du wurdest zu deiner letzten Position teleportiert
+command.enchantment.absent=<prefix> <red>Dein Item ist nicht mit <dark_red><enchantment><red> verzaubert
+command.enchantment.applicable=<prefix> <red>Diese Verzauberung ist nicht auf <dark_red><item><red> anwendbar
+command.enchantment.applied=<prefix> <white>Dein Item wurde mit <green><enchantment><white> verzaubert
+command.enchantment.invalid=<prefix> <dark_red><enchantment><red> ist keine gültige Verzauberung
+command.enchantment.removed=<prefix> <white>Die Verzauberung <green><enchantment><white> wurde von deinem Item entfernt
+command.flight.disabled.others=<prefix> <green><player><white> kann nicht länger fliegen
+command.flight.disabled.self=<prefix> <white>Du kannst nicht länger fliegen
+command.flight.enabled.others=<prefix> <green><player>'s<white> kann ab jetzt fliegen
+command.flight.enabled.self=<prefix> <white>Du kannst ab jetzt fliegen
+command.gamemode.changed.others=<prefix> <green><player> <white>ist jetzt im <green><gamemode>
+command.gamemode.changed.self=<prefix> <white>Du bist jetzt im <green><gamemode>
+command.god.active.others=<prefix> <green><player> <white>ist jetzt unverwundbar
+command.god.active.self=<prefix> <white>Du bist jetzt unverwundbar
+command.god.inactive.others=<prefix> <green><player> <white>ist nicht länger unverwundbar
+command.god.inactive.self=<prefix> <white>Du bist nicht länger unverwundbar
+command.health.restored.others=<prefix> <green><player><white> wurde vollständig geheilt
+command.health.restored.self=<prefix> <white>Du wurdest vollständig geheilt
+command.hold.item=<prefix> <red>Du musst ein Item in der Haupthand halten
+command.hunger.satisfied.others=<prefix> <green><player>'s<white> Hunger wurde gestillt
+command.hunger.satisfied.self=<prefix> <white>Dein Hunger wurde gestillt
+command.inventory.full=<prefix> <red>Dein Inventar ist voll
+command.item.head.fail=<prefix> <red>Du hast keinen Spielerkopf erhalten
+command.item.head.none=<prefix> <red>Es konnte keine passenden Kopfdaten gefunden werden
+command.item.head.player=<prefix> <gray>Kopf Besitzer<dark_gray>: <white><owner>
+command.item.head.received=<prefix> <white>Du hast einen Spieler Kopf erhalten
+command.item.head.url=<prefix> <gray>Kopf URL<dark_gray>: <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><white><url>
+command.item.head.value=<prefix> <gray>Kopf Wert<dark_gray>: <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><white><value>
+command.item.lore.fail=<prefix> <red>Die Beschreibung deines Items konnte nicht angepasst werden
+command.item.lore.success=<prefix> <white>Die Beschreibung deines Items wurde erfolgreich angepasst
+command.item.received=<prefix> <white>Du hast <green><amount> x <item><white> erhalten
+command.item.rename.fail=<prefix> <red>Dein Item konnte nicht umbenannt werden
+command.item.rename.success=<prefix> <white>Dein Item wurde erfolgreich umbenannt
+command.item.repaired.all=<prefix> <white>Alle deine Items wurden repariert
+command.item.repaired.fail=<prefix> <red>Dein Item konnte nicht repariert werden
+command.item.repaired.success=<prefix> <white>Dein Item wurde repariert
+command.item.unbreakable.fail=<prefix> <red>Dein Item konnte nicht unzerstörbar gemacht werden
+command.item.unbreakable.removed=<prefix> <white>Dein Item ist nicht länger unzerstörbar
+command.item.unbreakable.success=<prefix> <white>Dein Item ist jetzt unzerstörbar
+command.last.seen.now=<prefix> <green><player><white> is aktuell online
+command.last.seen.time=<prefix> <green><player><white> war zuletzt online <green><time>
+command.motd.changed=<prefix> <white>Die motd ist jetzt <green><motd>
+command.offline.teleport.fail.to=<prefix> <red>Du konntest nicht zu <dark_red><player> <red>teleportiert werden
+command.offline.teleport.fail=<prefix> <dark_red><source> <red>konnte nicht zu <dark_red><target> <red>teleportiert werden
+command.offline.teleport.location=<prefix> <dark_red><player> <red>ist bereits bei dieser Position
+command.offline.teleport.success.to=<prefix> <white>Du wurdest zu <green><player> <white>teleportiert
+command.offline.teleport.success=<prefix> <green><source> <white>wurde zu <green><target> <white>teleportiert
+command.ping.others=<prefix> <green><player><white> hat eine verbindungslatenz von <green><ping>ms
+command.ping.self=<prefix> <white>Du hast einen verbindungslatenz von <green><ping>ms
+command.player.excluded=<prefix> <red>Der Spieler <dark_red><player><red> ist nicht betroffen
 command.sender=<prefix> <red>Du kannst diesen command nicht nutzen
-enchantment.absent=<prefix> <red>Dein Item ist nicht mit <dark_red><enchantment><red> verzaubert
-enchantment.applied=<prefix> <white>Dein Item wurde mit <green><enchantment><white> verzaubert
-enchantment.invalid=<prefix> <dark_red><enchantment><red> ist keine gültige Verzauberung
-enchantment.not.applicable=<prefix> <red>Diese Verzauberung ist nicht auf <dark_red><item><red> anwendbar
-enchantment.removed=<prefix> <white>Die Verzauberung <green><enchantment><white> wurde von deinem Item entfernt
-flight.disabled.others=<prefix> <green><player><white> kann nicht länger fliegen
-flight.disabled.self=<prefix> <white>Du kannst nicht länger fliegen
-flight.enabled.others=<prefix> <green><player>'s<white> kann ab jetzt fliegen
-flight.enabled.self=<prefix> <white>Du kannst ab jetzt fliegen
-gamemode.changed.others=<prefix> <green><player> <white>ist jetzt im <green><gamemode>
-gamemode.changed.self=<prefix> <white>Du bist jetzt im <green><gamemode>
-god.active.others=<prefix> <green><player> <white>ist jetzt unverwundbar
-god.active.self=<prefix> <white>Du bist jetzt unverwundbar
-god.inactive.others=<prefix> <green><player> <white>ist nicht länger unverwundbar
-god.inactive.self=<prefix> <white>Du bist nicht länger unverwundbar
-health.restored.others=<prefix> <green><player><white> wurde vollständig geheilt
-health.restored.self=<prefix> <white>Du wurdest vollständig geheilt
-hold.item=<prefix> <red>Du musst ein Item in der Haupthand halten
-hunger.satisfied.others=<prefix> <green><player>'s<white> Hunger wurde gestillt
-hunger.satisfied.self=<prefix> <white>Dein Hunger wurde gestillt
-inventory.full=<prefix> <red>Dein Inventar ist voll
-item.head.fail=<prefix> <red>Du hast keinen Spielerkopf erhalten
-item.head.none=<prefix> <red>Es konnte keine passenden Kopfdaten gefunden werden
-item.head.player=<prefix> <gray>Kopf Besitzer<dark_gray>: <white><owner>
-item.head.received=<prefix> <white>Du hast einen Spieler Kopf erhalten
-item.head.url=<prefix> <gray>Kopf URL<dark_gray>: <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><white><url>
-item.head.value=<prefix> <gray>Kopf Wert<dark_gray>: <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><white><value>
-item.invalid=<prefix> <dark_red><item><red> ist kein gültiges Item
-item.lore.fail=<prefix> <red>Die Beschreibung deines Items konnte nicht angepasst werden
-item.lore.success=<prefix> <white>Die Beschreibung deines Items wurde erfolgreich angepasst
-item.received=<prefix> <white>Du hast <green><amount> x <item><white> erhalten
-item.rename.fail=<prefix> <red>Dein Item konnte nicht umbenannt werden
-item.rename.success=<prefix> <white>Dein Item wurde erfolgreich umbenannt
-item.repaired.all=<prefix> <white>Alle deine Items wurden repariert
-item.repaired.fail=<prefix> <red>Dein Item konnte nicht repariert werden
-item.repaired.success=<prefix> <white>Dein Item wurde repariert
-item.unbreakable.fail=<prefix> <red>Dein Item konnte nicht unzerstörbar gemacht werden
-item.unbreakable.removed=<prefix> <white>Dein Item ist nicht länger unzerstörbar
-item.unbreakable.success=<prefix> <white>Dein Item ist jetzt unzerstörbar
-last.seen.now=<prefix> <green><player><white> is aktuell online
-last.seen.time=<prefix> <green><player><white> war zuletzt online <green><time>
-motd.changed=<prefix> <white>Die motd ist jetzt <green><motd>
-offline.teleport.fail.to=<prefix> <red>Du konntest nicht zu <dark_red><player> <red>teleportiert werden
-offline.teleport.fail=<prefix> <dark_red><source> <red>konnte nicht zu <dark_red><target> <red>teleportiert werden
-offline.teleport.location=<prefix> <dark_red><player> <red>ist bereits bei dieser Position
-offline.teleport.success.to=<prefix> <white>Du wurdest zu <green><player> <white>teleportiert
-offline.teleport.success=<prefix> <green><source> <white>wurde zu <green><target> <white>teleportiert
-ping.others=<prefix> <green><player><white> hat eine verbindungslatenz von <green><ping>ms
-ping.self=<prefix> <white>Du hast einen verbindungslatenz von <green><ping>ms
-player.joined=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>ist dem Spiel beigetreten
-player.left=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>hat das Spiel verlassen
-player.not.affected=<prefix> <red>Der Spieler <dark_red><player><red> ist nicht betroffen
+command.speed.fly.changed.others=<prefix> <green><player>'s <white>Fluggeschwindigkeit ist jetzt <green><speed>
+command.speed.fly.changed.self=<prefix> <white>Deine Fluggeschwindigkeit is jetzt <green><speed>
+command.speed.walk.changed.others=<prefix> <green><player>'s <white>Laufgeschwindigkeit ist jetzt <green><speed>
+command.speed.walk.changed.self=<prefix> <white>Deine Laufgeschwindigkeit is jetzt <green><speed>
+command.time.day=<prefix> <white>Es ist jetzt Tag in <green><world>
+command.time.midnight=<prefix> <white>Es ist jetzt Mitternacht in <green><world>
+command.time.night=<prefix> <white>Es ist jetzt Nacht in <green><world>
+command.time.noon=<prefix> <white>Es ist jetzt Mittag in <green><world>
+command.vanish.disabled.others=<prefix> <green><player> <white>ist wieder sichtbar für andere
+command.vanish.disabled.self=<prefix> <white>Du bist wieder sichtbar für andere
+command.vanish.enabled.others=<prefix> <green><player> <white>ist jetzt unsichtbar für andere
+command.vanish.enabled.self=<prefix> <white>Du bist jetzt unsichtbar für andere
+command.weather.rain=<prefix> <white>Es regnet jetzt in <green><world>
+command.weather.sun=<prefix> <white>Es scheint jetzt die Sonne in <green><world>
+command.weather.thunder=<prefix> <white>Es gewittert jetzt in <green><world>
+command.world.excluded=<prefix> <red>Die Welt <dark_red><world><red> ist nicht betroffen
+player.connected=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>ist dem Spiel beigetreten
+player.disconnected=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>hat das Spiel verlassen
 player.not.found=<prefix> <red>Der Spieler <dark_red><player><red> war noch nie online
-player.not.online=<prefix> <red>Der Spieler <dark_red><player><red> ist nicht online
-speed.fly.changed.others=<prefix> <green><player>'s <white>Fluggeschwindigkeit ist jetzt <green><speed>
-speed.fly.changed.self=<prefix> <white>Deine Fluggeschwindigkeit is jetzt <green><speed>
-speed.walk.changed.others=<prefix> <green><player>'s <white>Laufgeschwindigkeit ist jetzt <green><speed>
-speed.walk.changed.self=<prefix> <white>Deine Laufgeschwindigkeit is jetzt <green><speed>
-time.day=<prefix> <white>Es ist jetzt Tag in <green><world>
-time.midnight=<prefix> <white>Es ist jetzt Mitternacht in <green><world>
-time.night=<prefix> <white>Es ist jetzt Nacht in <green><world>
-time.noon=<prefix> <white>Es ist jetzt Mittag in <green><world>
-vanish.disabled.others=<prefix> <green><player> <white>ist wieder sichtbar für andere
-vanish.disabled.self=<prefix> <white>Du bist wieder sichtbar für andere
-vanish.enabled.others=<prefix> <green><player> <white>ist jetzt unsichtbar für andere
-vanish.enabled.self=<prefix> <white>Du bist jetzt unsichtbar für andere
-weather.rain=<prefix> <white>Es regnet jetzt in <green><world>
-weather.sun=<prefix> <white>Es scheint jetzt die Sonne in <green><world>
-weather.thunder=<prefix> <white>Es gewittert jetzt in <green><world>
-world.not.affected=<prefix> <red>Die Welt <dark_red><world><red> ist nicht betroffen
-world.not.found=<prefix> <red>Die Welt <dark_red><world><red> existiert nicht
