--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -1,81 +1,78 @@
-back.empty=<prefix> <red>You can't go back any further
-back.teleport.fail=<prefix> <red>Failed to teleport you to your last position
-back.teleport.success=<prefix> <white>Teleported you to your last position
-broadcast.footer=<reset>
-broadcast.format=<red>Server <gray>| <message>
-broadcast.header=<reset>
 chat.format.delete=<hover:show_text:'Click to delete this message'><dark_gray>[<dark_red><bold>x</bold><dark_gray>] <reset>
 chat.format=<delete><chat_prefix><click:suggest_command:'/tell <player> '><chat_display_name><reset> <dark_gray>» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
+command.back.none=<prefix> <red>You can't go back any further
+command.back.teleport.fail=<prefix> <red>Failed to teleport you to your last position
+command.back.teleport.success=<prefix> <white>Teleported you to your last position
+command.broadcast.footer=<reset>
+command.broadcast.format=<red>Server <gray>| <message>
+command.broadcast.header=<reset>
+command.enchantment.absent=<prefix> <red>Your item does not have <dark_red><enchantment>
+command.enchantment.applicable=<prefix> <red>This enchantment is not applicable on <dark_red><item>
+command.enchantment.applied=<prefix> <white>Applied <green><enchantment><white> to your item
+command.enchantment.invalid=<prefix> <dark_red><enchantment><red> is not a valid enchantment
+command.enchantment.removed=<prefix> <white>Removed <green><enchantment><white> from your item
+command.flight.disabled.others=<prefix> <green><player><white> can no longer fly
+command.flight.disabled.self=<prefix> <white>You can no longer fly
+command.flight.enabled.others=<prefix> <green><player>'s<white> is now able to fly
+command.flight.enabled.self=<prefix> <white>You are now able to fly
+command.gamemode.changed.others=<prefix> <green><player> <white>is now in <green><gamemode>
+command.gamemode.changed.self=<prefix> <white>You are now in <green><gamemode>
+command.god.active.others=<prefix> <green><player> <white>is now invulnerable
+command.god.active.self=<prefix> <white>You are now invulnerable
+command.god.inactive.others=<prefix> <green><player> <white>is no longer invulnerable
+command.god.inactive.self=<prefix> <white>You are no longer invulnerable
+command.hat.equipped=<prefix> <white>You have equipped your item as a hat
+command.health.restored.others=<prefix> <green><player>'s<white> health has been restored
+command.health.restored.self=<prefix> <white>Your health has been restored
+command.hold.item=<prefix> <red>You have to hold an item in your main hand
+command.hunger.satisfied.others=<prefix> <green><player>'s<white> hunger has been satisfied
+command.hunger.satisfied.self=<prefix> <white>Your hunger has been satisfied
+command.inventory.full=<prefix> <red>Your inventory is full
+command.item.head.fail=<prefix> <red>You did not receive any player head
+command.item.head.none=<prefix> <red>Could not find matching skull data
+command.item.head.player=<prefix> <gray>Skull owner<dark_gray>: <white><owner>
+command.item.head.received=<prefix> <white>You received a player head
+command.item.head.url=<prefix> <gray>Skull url<dark_gray>: <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><white><url>
+command.item.head.value=<prefix> <gray>Skull value<dark_gray>: <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><white><value>
+command.item.lore.fail=<prefix> <red>Failed to change the lore of your item
+command.item.lore.success=<prefix> <white>Successfully changed the lore of your item
+command.item.received=<prefix> <white>You received <green><amount> x <item>
+command.item.rename.fail=<prefix> <red>Failed to rename your item
+command.item.rename.success=<prefix> <white>Successfully renamed your item
+command.item.repaired.all=<prefix> <white>All of your items got repaired
+command.item.repaired.fail=<prefix> <red>Failed to repair your item
+command.item.repaired.success=<prefix> <white>Your item got repaired
+command.item.unbreakable.fail=<prefix> <red>Failed to make your item unbreakable
+command.item.unbreakable.removed=<prefix> <white>Your item is no longer unbreakable
+command.item.unbreakable.success=<prefix> <white>Your item is now unbreakable
+command.last.seen.now=<prefix> <green><player><white> is online at the moment
+command.last.seen.time=<prefix> <green><player><white> was last seen <green><time>
+command.motd.changed=<prefix> <white>Changed motd to <green><motd>
+command.offline.teleport.fail.to=<prefix> <red>Failed to teleport you to <dark_red><player>
+command.offline.teleport.fail=<prefix> <red>Failed to teleport <dark_red><source> <red>to <dark_red><target>
+command.offline.teleport.location=<prefix> <dark_red><player> <red>is already at this position
+command.offline.teleport.success.to=<prefix> <white>Teleported you to <green><player>
+command.offline.teleport.success=<prefix> <green><source> <white>has been teleported to <green><target>
+command.ping.others=<prefix> <green><player>'s<white> connection latency is around <green><ping>ms
+command.ping.self=<prefix> <white>Your connection latency is around <green><ping>ms
+command.player.excluded=<prefix> <red>The player <dark_red><player><red> is not affected
 command.sender=<prefix> <red>You cannot use this command
-enchantment.absent=<prefix> <red>Your item does not have <dark_red><enchantment>
-enchantment.applied=<prefix> <white>Applied <green><enchantment><white> to your item
-enchantment.invalid=<prefix> <dark_red><enchantment><red> is not a valid enchantment
-enchantment.not.applicable=<prefix> <red>This enchantment is not applicable on <dark_red><item>
-enchantment.removed=<prefix> <white>Removed <green><enchantment><white> from your item
-flight.disabled.others=<prefix> <green><player><white> can no longer fly
-flight.disabled.self=<prefix> <white>You can no longer fly
-flight.enabled.others=<prefix> <green><player>'s<white> is now able to fly
-flight.enabled.self=<prefix> <white>You are now able to fly
-gamemode.changed.others=<prefix> <green><player> <white>is now in <green><gamemode>
-gamemode.changed.self=<prefix> <white>You are now in <green><gamemode>
-god.active.others=<prefix> <green><player> <white>is now invulnerable
-god.active.self=<prefix> <white>You are now invulnerable
-god.inactive.others=<prefix> <green><player> <white>is no longer invulnerable
-god.inactive.self=<prefix> <white>You are no longer invulnerable
-hat.equipped=<prefix> <white>You have equipped your item as a hat
-health.restored.others=<prefix> <green><player>'s<white> health has been restored
-health.restored.self=<prefix> <white>Your health has been restored
-hold.item=<prefix> <red>You have to hold an item in your main hand
-hunger.satisfied.others=<prefix> <green><player>'s<white> hunger has been satisfied
-hunger.satisfied.self=<prefix> <white>Your hunger has been satisfied
-inventory.full=<prefix> <red>Your inventory is full
-item.head.fail=<prefix> <red>You did not receive any player head
-item.head.none=<prefix> <red>Could not find matching skull data
-item.head.player=<prefix> <gray>Skull owner<dark_gray>: <white><owner>
-item.head.received=<prefix> <white>You received a player head
-item.head.url=<prefix> <gray>Skull url<dark_gray>: <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><white><url>
-item.head.value=<prefix> <gray>Skull value<dark_gray>: <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><white><value>
-item.invalid=<prefix> <dark_red><item><red> is not a valid item
-item.lore.fail=<prefix> <red>Failed to change the lore of your item
-item.lore.success=<prefix> <white>Successfully changed the lore of your item
-item.received=<prefix> <white>You received <green><amount> x <item>
-item.rename.fail=<prefix> <red>Failed to rename your item
-item.rename.success=<prefix> <white>Successfully renamed your item
-item.repaired.all=<prefix> <white>All of your items got repaired
-item.repaired.fail=<prefix> <red>Failed to repair your item
-item.repaired.success=<prefix> <white>Your item got repaired
-item.unbreakable.fail=<prefix> <red>Failed to make your item unbreakable
-item.unbreakable.removed=<prefix> <white>Your item is no longer unbreakable
-item.unbreakable.success=<prefix> <white>Your item is now unbreakable
-last.seen.now=<prefix> <green><player><white> is online at the moment
-last.seen.time=<prefix> <green><player><white> was last seen <green><time>
-motd.changed=<prefix> <white>Changed motd to <green><motd>
-offline.teleport.fail.to=<prefix> <red>Failed to teleport you to <dark_red><player>
-offline.teleport.fail=<prefix> <red>Could not teleport <dark_red><source> <red>to <dark_red><target>
-offline.teleport.location=<prefix> <dark_red><player> <red>is already at this position
-offline.teleport.success.to=<prefix> <white>Teleported you to <green><player>
-offline.teleport.success=<prefix> <green><source> <white>has been teleported to <green><target>
-ping.others=<prefix> <green><player>'s<white> connection latency is around <green><ping>ms
-ping.self=<prefix> <white>Your connection latency is around <green><ping>ms
-player.joined=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>joined the game
-player.left=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>left the game
-player.not.affected=<prefix> <red>The player <dark_red><player><red> is not affected
+command.speed.fly.changed.others=<prefix> <green><player>'s <white>fly speed is now <green><speed>
+command.speed.fly.changed.self=<prefix> <white>Your fly speed is now <green><speed>
+command.speed.walk.changed.others=<prefix> <green><player>'s <white>walk speed is now <green><speed>
+command.speed.walk.changed.self=<prefix> <white>Your walk speed is now <green><speed>
+command.time.day=<prefix> <white>It is now day in <green><world>
+command.time.midnight=<prefix> <white>It is now midnight in <green><world>
+command.time.night=<prefix> <white>It is now night in <green><world>
+command.time.noon=<prefix> <white>It is now noon in <green><world>
+command.vanish.disabled.others=<prefix> <green><player> <white>is now visible to others
+command.vanish.disabled.self=<prefix> <white>You are now visible to others
+command.vanish.enabled.others=<prefix> <green><player> <white>is now invisible to others
+command.vanish.enabled.self=<prefix> <white>You are now invisible to others
+command.weather.rain=<prefix> <white>It is now raining in <green><world>
+command.weather.sun=<prefix> <white>It is now sunny in <green><world>
+command.weather.thunder=<prefix> <white>It is now thundering in <green><world>
+command.world.excluded=<prefix> <red>The world <dark_red><world><red> is not affected
+player.connected=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>joined the game
+player.disconnected=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>left the game
 player.not.found=<prefix> <red>The player <dark_red><player><red> has never played before
-player.not.online=<prefix> <red>The player <dark_red><player><red> is not online
-speed.fly.changed.others=<prefix> <green><player>'s <white>fly speed is now <green><speed>
-speed.fly.changed.self=<prefix> <white>Your fly speed is now <green><speed>
-speed.walk.changed.others=<prefix> <green><player>'s <white>walk speed is now <green><speed>
-speed.walk.changed.self=<prefix> <white>Your walk speed is now <green><speed>
-time.day=<prefix> <white>It is now day in <green><world>
-time.midnight=<prefix> <white>It is now midnight in <green><world>
-time.night=<prefix> <white>It is now night in <green><world>
-time.noon=<prefix> <white>It is now noon in <green><world>
-vanish.disabled.others=<prefix> <green><player> <white>is now visible to others
-vanish.disabled.self=<prefix> <white>You are now visible to others
-vanish.enabled.others=<prefix> <green><player> <white>is now invisible to others
-vanish.enabled.self=<prefix> <white>You are now invisible to others
-weather.rain=<prefix> <white>It is now raining in <green><world>
-weather.sun=<prefix> <white>It is now sunny in <green><world>
-weather.thunder=<prefix> <white>It is now thundering in <green><world>
-world.not.affected=<prefix> <red>The world <dark_red><world><red> is not affected
-world.not.found=<prefix> <red>The world <dark_red><world><red> does not exist
