Refactor text formatting in `tweaks.properties`.
Updated message and command formats to improve readability by consistently applying color tags and wrapping elements correctly. This change ensures better visual clarity and uniformity across the user interface.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -1,78 +1,78 @@
-chat.format.delete=<hover:show_text:'Click to delete this message'><dark_gray>[<dark_red><bold>x</bold><dark_gray>] <reset>
+chat.format.delete=<hover:show_text:'Click to delete this message'><dark_gray>[<bold><dark_red>x</dark_red></bold>] </dark_gray>
 chat.format=<delete><chat_prefix><click:suggest_command:'/tell <player> '><chat_display_name><reset> <dark_gray>» <reset><click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message>
-command.back.none=<prefix> <red>You can't go back any further
-command.back.teleport.fail=<prefix> <red>Failed to teleport you to your last position
-command.back.teleport.success=<prefix> <white>Teleported you to your last position
+command.back.none=<red><prefix> You can't go back any further</red>
+command.back.teleport.fail=<red><prefix> Failed to teleport you to your last position</red>
+command.back.teleport.success=<gray><prefix> Teleported you to your last position</gray>
 command.broadcast.footer=<reset>
-command.broadcast.format=<red>Server <gray>| <message>
+command.broadcast.format=<red>Server</red> <gray>|</gray> <message><reset>
 command.broadcast.header=<reset>
-command.enchantment.absent=<prefix> <red>Your item does not have <dark_red><enchantment>
-command.enchantment.applicable=<prefix> <red>This enchantment is not applicable on <dark_red><item>
-command.enchantment.applied=<prefix> <white>Applied <green><enchantment><white> to your item
-command.enchantment.invalid=<prefix> <dark_red><enchantment><red> is not a valid enchantment
-command.enchantment.removed=<prefix> <white>Removed <green><enchantment><white> from your item
-command.flight.disabled.others=<prefix> <green><player><white> can no longer fly
-command.flight.disabled.self=<prefix> <white>You can no longer fly
-command.flight.enabled.others=<prefix> <green><player>'s<white> is now able to fly
-command.flight.enabled.self=<prefix> <white>You are now able to fly
-command.gamemode.changed.others=<prefix> <green><player> <white>is now in <green><gamemode>
-command.gamemode.changed.self=<prefix> <white>You are now in <green><gamemode>
-command.god.active.others=<prefix> <green><player> <white>is now invulnerable
-command.god.active.self=<prefix> <white>You are now invulnerable
-command.god.inactive.others=<prefix> <green><player> <white>is no longer invulnerable
-command.god.inactive.self=<prefix> <white>You are no longer invulnerable
-command.hat.equipped=<prefix> <white>You have equipped your item as a hat
-command.health.restored.others=<prefix> <green><player>'s<white> health has been restored
-command.health.restored.self=<prefix> <white>Your health has been restored
-command.hold.item=<prefix> <red>You have to hold an item in your main hand
-command.hunger.satisfied.others=<prefix> <green><player>'s<white> hunger has been satisfied
-command.hunger.satisfied.self=<prefix> <white>Your hunger has been satisfied
-command.inventory.full=<prefix> <red>Your inventory is full
-command.item.head.fail=<prefix> <red>You did not receive any player head
-command.item.head.none=<prefix> <red>Could not find matching skull data
-command.item.head.player=<prefix> <gray>Skull owner<dark_gray>: <white><owner>
-command.item.head.received=<prefix> <white>You received a player head
-command.item.head.url=<prefix> <gray>Skull url<dark_gray>: <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><white><url>
-command.item.head.value=<prefix> <gray>Skull value<dark_gray>: <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><white><value>
-command.item.lore.fail=<prefix> <red>Failed to change the lore of your item
-command.item.lore.success=<prefix> <white>Successfully changed the lore of your item
-command.item.received=<prefix> <white>You received <green><amount> x <item>
-command.item.rename.fail=<prefix> <red>Failed to rename your item
-command.item.rename.success=<prefix> <white>Successfully renamed your item
-command.item.repaired.all=<prefix> <white>All of your items got repaired
-command.item.repaired.fail=<prefix> <red>Failed to repair your item
-command.item.repaired.success=<prefix> <white>Your item got repaired
-command.item.unbreakable.fail=<prefix> <red>Failed to make your item unbreakable
-command.item.unbreakable.removed=<prefix> <white>Your item is no longer unbreakable
-command.item.unbreakable.success=<prefix> <white>Your item is now unbreakable
-command.last.seen.now=<prefix> <green><player><white> is online at the moment
-command.last.seen.time=<prefix> <green><player><white> was last seen <green><time>
-command.motd.changed=<prefix> <white>Changed motd to <green><motd>
-command.offline.teleport.fail.to=<prefix> <red>Failed to teleport you to <dark_red><player>
-command.offline.teleport.fail=<prefix> <red>Failed to teleport <dark_red><source> <red>to <dark_red><target>
-command.offline.teleport.location=<prefix> <dark_red><player> <red>is already at this position
-command.offline.teleport.success.to=<prefix> <white>Teleported you to <green><player>
-command.offline.teleport.success=<prefix> <green><source> <white>has been teleported to <green><target>
-command.ping.others=<prefix> <green><player>'s<white> connection latency is around <green><ping>ms
-command.ping.self=<prefix> <white>Your connection latency is around <green><ping>ms
-command.player.excluded=<prefix> <red>The player <dark_red><player><red> is not affected
-command.sender=<prefix> <red>You cannot use this command
-command.speed.fly.changed.others=<prefix> <green><player>'s <white>fly speed is now <green><speed>
-command.speed.fly.changed.self=<prefix> <white>Your fly speed is now <green><speed>
-command.speed.walk.changed.others=<prefix> <green><player>'s <white>walk speed is now <green><speed>
-command.speed.walk.changed.self=<prefix> <white>Your walk speed is now <green><speed>
-command.time.day=<prefix> <white>It is now day in <green><world>
-command.time.midnight=<prefix> <white>It is now midnight in <green><world>
-command.time.night=<prefix> <white>It is now night in <green><world>
-command.time.noon=<prefix> <white>It is now noon in <green><world>
-command.vanish.disabled.others=<prefix> <green><player> <white>is now visible to others
-command.vanish.disabled.self=<prefix> <white>You are now visible to others
-command.vanish.enabled.others=<prefix> <green><player> <white>is now invisible to others
-command.vanish.enabled.self=<prefix> <white>You are now invisible to others
-command.weather.rain=<prefix> <white>It is now raining in <green><world>
-command.weather.sun=<prefix> <white>It is now sunny in <green><world>
-command.weather.thunder=<prefix> <white>It is now thundering in <green><world>
-command.world.excluded=<prefix> <red>The world <dark_red><world><red> is not affected
-player.connected=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>joined the game
-player.disconnected=<prefix> <green><click:suggest_command:'/tell <player> '><player><reset> <white>left the game
-player.not.found=<prefix> <red>The player <dark_red><player><red> has never played before
+command.enchantment.absent=<red><prefix> Your item does not have <dark_red><enchantment></dark_red></red>
+command.enchantment.applicable=<red><prefix> This enchantment is not applicable on <dark_red><item></dark_red></red>
+command.enchantment.applied=<gray><prefix> Applied <green><enchantment></green> to your item</gray>
+command.enchantment.invalid=<red><prefix> <dark_red><enchantment></dark_red> is not a valid enchantment</red>
+command.enchantment.removed=<gray><prefix> Removed <green><enchantment></green> from your item</gray>
+command.flight.disabled.others=<gray><prefix> <green><player></green> can no longer fly</gray>
+command.flight.disabled.self=<gray><prefix> You can no longer fly</gray>
+command.flight.enabled.others=<gray><prefix> <green><player></green> is now able to fly</gray>
+command.flight.enabled.self=<gray><prefix> You are now able to fly</gray>
+command.gamemode.changed.others=<gray><prefix> <green><player></green> is now in <green><gamemode></green></gray>
+command.gamemode.changed.self=<gray><prefix> You are now in <green><gamemode></green></gray>
+command.god.active.others=<gray><prefix> <green><player></green> is now invulnerable</gray>
+command.god.active.self=<gray><prefix> You are now invulnerable</gray>
+command.god.inactive.others=<gray><prefix> <green><player></green> is no longer invulnerable</gray>
+command.god.inactive.self=<gray><prefix> You are no longer invulnerable</gray>
+command.hat.equipped=<gray><prefix> You have equipped your item as a hat</gray>
+command.health.restored.others=<gray><prefix> <green><player>'s</green> health has been restored</gray>
+command.health.restored.self=<gray><prefix> Your health has been restored</gray>
+command.hold.item=<red><prefix> You have to hold an item in your main hand</red>
+command.hunger.satisfied.others=<gray><prefix> <green><player>'s</green> hunger has been satisfied</gray>
+command.hunger.satisfied.self=<gray><prefix> Your hunger has been satisfied</gray>
+command.inventory.full=<red><prefix> Your inventory is full</red>
+command.item.head.fail=<red><prefix> You did not receive any player head</red>
+command.item.head.none=<red><prefix> Could not find matching skull data</red>
+command.item.head.player=<gray><prefix> Skull owner<dark_gray>:</dark_gray> <green><owner></green></gray>
+command.item.head.received=<gray><prefix> You received a player head</gray>
+command.item.head.url=<gray><prefix> Skull url<dark_gray>:</dark_gray> <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><green><url></green></gray>
+command.item.head.value=<gray><prefix> Skull value<dark_gray>:</dark_gray> <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><green><value></green></gray>
+command.item.lore.fail=<red><prefix> Failed to change the lore of your item</red>
+command.item.lore.success=<gray><prefix> Successfully changed the lore of your item</gray>
+command.item.received=<gray><prefix> You received <green><amount> x <item></green></gray>
+command.item.rename.fail=<red><prefix> Failed to rename your item</red>
+command.item.rename.success=<gray><prefix> Successfully renamed your item</gray>
+command.item.repaired.all=<gray><prefix> All of your items got repaired</gray>
+command.item.repaired.fail=<red><prefix> Failed to repair your item</red>
+command.item.repaired.success=<gray><prefix>Your item got repaired</gray>
+command.item.unbreakable.fail=<red><prefix> Failed to make your item unbreakable</red>
+command.item.unbreakable.removed=<gray><prefix> Your item is no longer unbreakable</gray>
+command.item.unbreakable.success=<gray><prefix> Your item is now unbreakable</gray>
+command.last.seen.now=<gray><prefix> <green><player></green> is online at the moment</gray>
+command.last.seen.time=<gray><prefix> <green><player></green> was last seen <green><time></gray>
+command.motd.changed=<gray><prefix>Changed motd to <green><motd></green></gray>
+command.offline.teleport.fail.to=<red><prefix> Failed to teleport you to <dark_red><player></dark_red></red>
+command.offline.teleport.fail=<red><prefix> Failed to teleport <dark_red><source></dark_red> to <dark_red><target></dark_red></red>
+command.offline.teleport.location=<red><prefix> <dark_red><player></dark_red> is already at this position</red>
+command.offline.teleport.success.to=<gray><prefix> Teleported you to <green><player></green></gray>
+command.offline.teleport.success=<gray><prefix> <green><source></green> has been teleported to <green><target></green></gray>
+command.ping.others=<gray><prefix> <green><player>'s</green> connection latency is around <green><ping>ms</green></gray>
+command.ping.self=<gray><prefix> Your connection latency is around <green><ping>ms</green></gray>
+command.player.excluded=<red><prefix> The player <dark_red><player></dark_red> is not affected</red>
+command.sender=<red><prefix> You cannot use this command</red>
+command.speed.fly.changed.others=<gray><prefix> <green><player>'s</green> fly speed is now <green><speed></green></gray>
+command.speed.fly.changed.self=<gray><prefix> Your fly speed is now <green><speed></gray>
+command.speed.walk.changed.others=<gray><prefix> <green><player>'s</green> walk speed is now <green><speed></green></gray>
+command.speed.walk.changed.self=<gray><prefix> Your walk speed is now <green><speed></green></gray>
+command.time.day=<gray><prefix> It is now day in <green><world></green></gray>
+command.time.midnight=<gray><prefix> It is now midnight in <green><world></green></gray>
+command.time.night=<gray><prefix> It is now night in <green><world></green></gray>
+command.time.noon=<gray><prefix> It is now noon in <green><world></green></gray>
+command.vanish.disabled.others=<gray><prefix> <green><player></green> is now visible to others</gray>
+command.vanish.disabled.self=<gray><prefix> You are now visible to others</gray>
+command.vanish.enabled.others=<gray><prefix> <green><player></green> is now invisible to others</gray>
+command.vanish.enabled.self=<gray><prefix> You are now invisible to others</gray>
+command.weather.rain=<gray><prefix> It is now raining in <green><world></gray>
+command.weather.sun=<gray><prefix> It is now sunny in <green><world></gray>
+command.weather.thunder=<gray><prefix> It is now thundering in <green><world></gray>
+command.world.excluded=<red><prefix> The world <dark_red><world></dark_red> is not affected</red>
+player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green></click> joined the game</gray>
+player.disconnected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green></click> left the game</gray>
+player.not.found=<red><prefix> The player <dark_red><player></dark_red> has never played before</red>
